# client_template

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cxx
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cxx  myShape.cxx  myShape.hxx  webservice.cxx  webservice.hxx
src/common/: CMakeLists.txt  database.cxx  database.hxx  pod.hxx
src/server/: CMakeLists.txt  constant.hxx  main.cxx  model.cxx  model.hxx  server.cxx  server.hxx  workspace.code-workspace
src/util/: CMakeLists.txt  dynamicValue.hxx  util.hxx
src/webservice/: webservice.cxx  webservice.hxx
test/: CMakeLists.txt  constant.hxx  gameTest.cxx
